<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingTop="@dimen/general.distance.xxxsmall">

    <TextView
        android:id="@+id/title"
        style="@style/General.Title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/weekly.title"
        android:textSize="@dimen/font.size.weekly.title" />


    <ImageView
        android:id="@+id/leftArrow"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/general.distance"
        android:paddingBottom="@dimen/general.distance.xxmini"
        android:paddingEnd="@dimen/general.distance.xxsmall"
        android:paddingStart="@dimen/general.distance.xxsmall"
        android:paddingTop="@dimen/general.distance.xxmini"
        android:src="@drawable/ic_left_arrow"
        android:tint="@color/applicationLightGray"
        app:layout_constraintBottom_toBottomOf="@+id/dateText"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/dateText"
        app:layout_constraintVertical_bias="0.5"
        tools:ignore="ContentDescription" />

    <ImageView
        android:id="@+id/rightArrow"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/general.distance"
        android:paddingBottom="@dimen/general.distance.xxmini"
        android:paddingEnd="@dimen/general.distance.xxsmall"
        android:paddingStart="@dimen/general.distance.xxsmall"
        android:paddingTop="@dimen/general.distance.xxmini"
        android:src="@drawable/ic_right_arrow"
        android:tint="@color/applicationLightGray"
        app:layout_constraintBottom_toBottomOf="@+id/dateText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/dateText"
        app:layout_constraintVertical_bias="0.5"
        tools:ignore="ContentDescription" />

    <TextView
        android:id="@+id/dateText"
        style="@style/General.Text"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toStartOf="@+id/rightArrow"
        app:layout_constraintStart_toEndOf="@+id/leftArrow"
        app:layout_constraintTop_toBottomOf="@+id/title" />

    <com.aptatek.pkulab.view.weekly.swipe.CustomViewPager
        android:id="@+id/viewpager"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="@dimen/general.distance.xxsmall"
        app:layout_constraintBottom_toTopOf="@id/label"
        app:layout_constraintTop_toBottomOf="@id/dateText" />

    <android.support.constraint.Group
        android:id="@+id/emptyGroup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:constraint_referenced_ids="playIcon, emptyTitle, emptySubtitle" />

    <ImageView
        android:id="@+id/playIcon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_measure"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="ContentDescription" />

    <TextView
        android:id="@+id/emptyTitle"
        style="@style/General.Title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/weekly.empty.title"
        android:textSize="@dimen/font.size.weekly.title"
        app:layout_constraintTop_toBottomOf="@+id/playIcon" />

    <TextView
        android:id="@+id/emptySubtitle"
        style="@style/General.Text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/weekly.empty.subtitle"
        app:layout_constraintTop_toBottomOf="@+id/emptyTitle" />


    <TextView
        android:id="@+id/label"
        style="@style/General.Text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/applicationSolidGray"
        android:textSize="@dimen/font.size.normal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="@id/buttonPdfExport"
        tools:text="Results are in mg/dl" />

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/buttonPdfExport"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/general.distance.mini"
        android:background="@color/pkuPdfFasting"
        android:src="@drawable/ic_pdf"
        android:visibility="invisible"
        app:backgroundTint="@color/applicationWhite"
        app:borderWidth="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:rippleColor="@color/pkuPdfFasting" />
</android.support.constraint.ConstraintLayout>