...
    <TableRow
        android:layout_marginStart="@dimen/general.distance.xxsmall"
        android:layout_marginEnd="@dimen/general.distance.xxsmall"
        android:layout_weight="1">

        <Button
            android:id="@+id/button1"
            style="@style/Dial.Button"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/pin.button.1" />

        <Button
            android:id="@+id/button2"
            style="@style/Dial.Button"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/pin.button.2" />

        <Button
            android:id="@+id/button3"
            style="@style/Dial.Button"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/pin.button.3" />

...
    <TableRow
        android:layout_marginStart="@dimen/general.distance.xxsmall"
        android:layout_marginEnd="@dimen/general.distance.xxsmall"
        android:layout_weight="1">

        <Button
            android:id="@+id/button4"
            style="@style/Dial.Button"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/pin.button.4" />

        <Button
            android:id="@+id/button5"
            style="@style/Dial.Button"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/pin.button.5" />

...
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:src="@drawable/ic_delete"
            tools:ignore="ContentDescription" />

        <Button
            android:id="@+id/button0"
            style="@style/Dial.Button"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/pin.button.0" />

...
