...
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.15" />

    <TextView
        android:id="@+id/title"
        style="@style/Header.Text"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:text="@string/set.pin.set.title"
        app:layout_constraintTop_toBottomOf="@id/headerGuideLine" />

    <TextView
        android:id="@+id/hintTextView"
        style="@style/General.Text"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="@dimen/general.distance.xxxsmall"
        android:text="@string/set.pin.set.hint"
        app:layout_constraintTop_toBottomOf="@+id/title" />

    <LinearLayout
        android:id="@+id/pinLayout"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginEnd="@dimen/general.distance"
        android:layout_marginStart="@dimen/general.distance"
        android:layout_marginTop="@dimen/general.distance.xsmall"
        android:gravity="center"
...
            android:layout_weight="1"
            android:src="@drawable/pin_circle" />
    </LinearLayout>


    <TextView
        android:id="@+id/messageTextView"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:gravity="center"
        android:textSize="@dimen/font.size.xxbig"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@id/buttonsGuideLine"
...
