<?xml version="1.0" encoding="utf-8"?>
<com.sothree.slidinguppanel.SlidingUpPanelLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:sothree="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/panelLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="bottom"
    app:umanoFadeColor="@android:color/transparent"
    app:umanoOverlay="false"
    sothree:umanoPanelHeight="0dp"
    sothree:umanoShadowHeight="0dp"
    tools:context=".view.main.MainHostActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="@dimen/activity.margin.horizontal"
        android:animateLayoutChanges="true">

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/chartGuide"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.63125" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideBottom"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.77" />

        <com.aptatek.pkulab.widget.HeaderView
            android:id="@+id/header"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/home.margin.top"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.0" />

        <ImageView
            android:id="@+id/playIcon"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_marginTop="@dimen/general.distance.xsmall"
            android:src="@drawable/ic_bubble_play"
            android:visibility="invisible"
            app:layout_constraintBottom_toTopOf="@id/chartGuide"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/header"
            tools:ignore="ContentDescription" />

        <com.yarolegovich.discretescrollview.DiscreteScrollView
            android:id="@+id/scrollView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/general.distance.xsmall"
            app:layout_constraintBottom_toTopOf="@id/chartGuide"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/header" />

        <TextView
            android:id="@+id/unitText"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/general.distance.xxxsmall"
            android:fontFamily="@font/nunito_regular"
            android:gravity="center_horizontal"
            android:textColor="@color/applicationSolidGray"
            android:textSize="@dimen/font.size.medium"
            android:visibility="gone"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/scrollView"
            tools:text="Test" />

        <Button
            android:id="@+id/bigSettingsButton"
            style="@style/Grey.Settings.Button.Big"
            android:layout_width="0dp"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent" />

        <Button
            android:id="@+id/settingsButton"
            style="@style/Grey.Settings.Button"
            android:layout_width="@dimen/general.button.height.big"
            android:layout_height="@dimen/general.button.height.big"
            android:layout_marginStart="@dimen/general.distance.32dp"
            android:layout_marginEnd="@dimen/general.distance.xsmall"
            android:layout_marginBottom="@dimen/main.bottom.margin"
            android:elevation="0dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toLeftOf="@+id/newTestButton" />

        <Button
            android:id="@+id/exportButton"
            style="@style/Grey.Settings.Button.Big"
            android:layout_width="0dp"
            android:layout_marginBottom="12dp"
            android:drawableStart="@drawable/ic_pdf"
            android:text="@string/main.button.export"
            android:visibility="gone"
            app:layout_constraintBottom_toTopOf="@id/bigSettingsButton"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent" />

        <Button
            android:id="@+id/newTestButton"
            style="@style/General.Rounded.Button"
            android:layout_width="0dp"
            android:layout_height="@dimen/general.button.height.big"
            android:layout_marginTop="@dimen/general.distance.xxsmall"
            android:layout_marginEnd="@dimen/general.distance.32dp"
            android:layout_marginBottom="@dimen/main.bottom.margin"
            android:gravity="center"
            android:text="@string/main.button.new.test"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toRightOf="@id/settingsButton"
            app:layout_constraintRight_toRightOf="parent" />

        <Button
            android:id="@+id/weeklyButton"
            style="@style/General.Rounded.Gray.Button.Secondary"
            android:layout_width="0dp"
            android:layout_marginStart="@dimen/general.distance.32dp"
            android:layout_marginTop="@dimen/general.distance.20dp"
            android:layout_marginEnd="@dimen/general.distance.32dp"
            android:layout_marginBottom="@dimen/general.distance.20dp"
            android:drawableEnd="@drawable/ic_arrow_up"
            android:drawablePadding="@dimen/general.distance.xxsmall"
            android:text="@string/main.button.weekly"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent" />

        <androidx.constraintlayout.widget.Group
            android:id="@+id/buttonGroup"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="gone"
            app:constraint_referenced_ids="newTestButton, settingsButton, weeklyButton" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.30" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="0.7"
        android:background="@drawable/daily_result_sliding_background"
        android:elevation="@dimen/general.distance.small">

        <ImageView
            android:id="@+id/imgCloseResults"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/swipe_close_indicator"
            app:layout_constraintBottom_toTopOf="@+id/recyclerViewDailyResults"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="ContentDescription" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recyclerViewDailyResults"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="@dimen/general.distance.small"
            android:layout_marginTop="@dimen/general.distance.big"
            android:layout_marginRight="@dimen/general.distance.small"
            android:layout_marginBottom="@dimen/general.distance.normal" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</com.sothree.slidinguppanel.SlidingUpPanelLayout>
